--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </div>
 <div id="card-front">
 <div class="wrap">
-<h1 style="font-size:5vw;" class="animated infinite swing">HBD 2020 Savi!</h1>
+<h1 style="font-size:5vw;" class="animated infinite swing">HBD 2024 Kajal!</h1>
 <div class="cake_and_velas">
 <div class="velas">
 <div class="fuego"></div>
