--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <head>
 	<title>Happy Birthday Kajal</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Savita">
+	<meta name="description" content="Happy Birthday kajal">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://www.linkedin.com/in/suryakant-pandey/" /> 
+	<link rel="author" href="https://www.instgram.com/hritikx.16/" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
